--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,9 +2,9 @@ name: Run Decoder
 
 on:
   push:
-    branches: [main]
+    branches: [main,cryptocurrency-dataset]
   pull_request:
-    branches: [main]
+    branches: [main,cryptocurrency-dataset]
   workflow_dispatch:
 
 jobs:
