--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Run decoder in Docker container
         run: |
           docker run --rm \
+            --shm-size=2g \
             -v ${{ github.workspace }}:/app \
             -e PYTHONUNBUFFERED=1 \
             tarikua123/decoder-image:latest \
