--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,107 +1,108 @@
-name: Run Decoder
-
-on:
-  push:
-    branches: [main,crypto]
-  pull_request:
-    branches: [main,crypto]
-  workflow_dispatch:
-
-jobs:
-  run-decoder:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Pull prebuilt Docker image
-        run: |
-          docker pull tarikua123/decoder-image:latest
-
-      - name: Create output directories
-        run: |
-          mkdir -p ${{ github.workspace }}/plots/cluster
-          mkdir -p ${{ github.workspace }}/results
-          chmod -R 777 ${{ github.workspace }}/plots
-          chmod -R 777 ${{ github.workspace }}/results
-
-      - name: Check available processors and usage percentage
-        id: cpu-check
-        run: |
-          TOTAL_CPUS=$(nproc)
-          USED_CPUS=4
-          PERCENT_USED=$(( 100 * USED_CPUS / TOTAL_CPUS ))
-          echo "Total available processors: $TOTAL_CPUS"
-          echo "Processors used for decoder: $USED_CPUS"
-          echo "Percent of processors used: ${PERCENT_USED}%"
-          echo "total_cpus=$TOTAL_CPUS" >> $GITHUB_OUTPUT
-          echo "percent_used=$PERCENT_USED" >> $GITHUB_OUTPUT
-
-      - name: Run decoder in Docker container
-        run: |
-          docker run --rm \
-            --shm-size=2g \
-            -v ${{ github.workspace }}:/app \
-            -e PYTHONUNBUFFERED=1 \
-            tarikua123/decoder-image:latest \
-            bash -c "
-              set -e
-              echo 'Starting decoder run...'
-              python -m subgraph_mining.decoder \
-                --dataset=stablecoin_sample.pkl \
-                --n_trials=200 \
-                --node_anchored \
-                --out_path=/app/results/patterns.pkl \
-                --graph_type=directed
-              echo 'Checking output directories...'
-              ls -la /app/plots/cluster
-              ls -la /app/results
-              "
-
-      - name: Run matcher in Docker container
-        run: |
-          docker run --rm \
-            -v ${{ github.workspace }}:/app \
-            -e PYTHONUNBUFFERED=1 \
-            tarikua123/decoder-image:latest \
-            bash -c "
-              set -e
-              echo 'Starting matcher run on custom gene graph...'
-              python -m subgraph_matching.train \
-                --dataset=graph \
-                --graph_pkl_path=stablecoin_sample.pkl \
-                --node_anchored \
-                --batch_size 16 \
-                --val_size 128
-              echo 'Checking output directories...'
-              ls -la /app/results
-              ls -la /app/plots
-            "
-
-      - name: Check for generated files
-        run: |
-          echo "Checking plots directory:"
-          ls -R plots/ || echo "No plots directory found"
-          echo "Checking results directory:"
-          ls -R results/ || echo "No results directory found"
-
-      - name: Upload plots as artifact
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: decoder-plots
-          path: |
-            plots/
-            results/
-          retention-days: 7
-          if-no-files-found: warn
-
-      - name: Upload logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: decoder-logs
-          path: |
-            *.log
-            *.err
+name: Run Decoder  
+  
+on:  
+  push:  
+    branches: [main,crypto]  
+  pull_request:  
+    branches: [main,crypto]  
+  workflow_dispatch:  
+  
+jobs:  
+  run-decoder:  
+    runs-on: ubuntu-latest  
+    steps:  
+      - name: Checkout repository  
+        uses: actions/checkout@v3  
+  
+      - name: Pull prebuilt Docker image  
+        run: |  
+          docker pull tarikua123/decoder-image:latest  
+  
+      - name: Create output directories  
+        run: |  
+          mkdir -p ${{ github.workspace }}/plots/cluster  
+          mkdir -p ${{ github.workspace }}/results  
+          chmod -R 777 ${{ github.workspace }}/plots  
+          chmod -R 777 ${{ github.workspace }}/results  
+  
+      - name: Check available processors and usage percentage  
+        id: cpu-check  
+        run: |  
+          TOTAL_CPUS=$(nproc)  
+          USED_CPUS=4  
+          PERCENT_USED=$(( 100 * USED_CPUS / TOTAL_CPUS ))  
+          echo "Total available processors: $TOTAL_CPUS"  
+          echo "Processors used for decoder: $USED_CPUS"  
+          echo "Percent of processors used: ${PERCENT_USED}%"  
+          echo "total_cpus=$TOTAL_CPUS" >> $GITHUB_OUTPUT  
+          echo "percent_used=$PERCENT_USED" >> $GITHUB_OUTPUT  
+  
+      - name: Run decoder in Docker container  
+        run: |  
+          docker run --rm \  
+            --shm-size=2g \  
+            -v ${{ github.workspace }}:/app \  
+            -e PYTHONUNBUFFERED=1 \  
+            tarikua123/decoder-image:latest \  
+            bash -c "  
+              set -e  
+              echo 'Starting decoder run...'  
+              python -m subgraph_mining.decoder \  
+                --dataset=stablecoin_sample.pkl \  
+                --n_trials=200 \  
+                --node_anchored \  
+                --out_path=/app/results/patterns.pkl \  
+                --graph_type=directed  
+              echo 'Checking output directories...'  
+              ls -la /app/plots/cluster  
+              ls -la /app/results  
+              "  
+  
+      - name: Run matcher in Docker container  
+        run: |  
+          docker run --rm \  
+            --shm-size=2g \  
+            -v ${{ github.workspace }}:/app \  
+            -e PYTHONUNBUFFERED=1 \  
+            tarikua123/decoder-image:latest \  
+            bash -c "  
+              set -e  
+              echo 'Starting matcher run on cryptocurrency dataset...'  
+              python -m subgraph_matching.train \  
+                --dataset=graph \  
+                --graph_pkl_path=stablecoin_sample.pkl \  
+                --node_anchored \  
+                --batch_size 16 \  
+                --val_size 128  
+              echo 'Checking output directories...'  
+              ls -la /app/results  
+              ls -la /app/plots  
+            "  
+  
+      - name: Check for generated files  
+        run: |  
+          echo "Checking plots directory:"  
+          ls -R plots/ || echo "No plots directory found"  
+          echo "Checking results directory:"  
+          ls -R results/ || echo "No results directory found"  
+  
+      - name: Upload plots as artifact  
+        if: always()  
+        uses: actions/upload-artifact@v4  
+        with:  
+          name: decoder-plots  
+          path: |  
+            plots/  
+            results/  
+          retention-days: 7  
+          if-no-files-found: warn  
+  
+      - name: Upload logs  
+        if: always()  
+        uses: actions/upload-artifact@v4  
+        with:  
+          name: decoder-logs  
+          path: |  
+            *.log  
+            *.err  
           if-no-files-found: ignore
