--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -15,8 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Pull prebuilt Docker image
-        run: |
-          docker pull tarikua123/decoder-image:latest
+        run: docker pull tarikua123/decoder-image:latest
 
       - name: Create output directories
         run: |
@@ -25,70 +24,7 @@ jobs:
           chmod -R 777 ${{ github.workspace }}/plots
           chmod -R 777 ${{ github.workspace }}/results
 
-      - name: Create guaranteed working dataset
-        run: |
-          docker run --rm \
-            -v ${{ github.workspace }}:/app \
-            tarikua123/decoder-image:latest \
-            python -c "
-import pickle
-import networkx as nx
-import random
-
-print('Creating guaranteed working dataset...')
-G = nx.DiGraph()
-
-# Add 50 nodes with proper attributes
-for i in range(50):
-    G.add_node(i, label='address', id=str(i))
-
-# Add 100 edges with proper attributes  
-for i in range(100):
-    source = random.randint(0, 49)
-    target = random.randint(0, 49)
-    if source != target:
-        G.add_edge(source, target, weight=1.0, type='transaction')
-
-print(f'Graph: {G.number_of_nodes()} nodes, {G.number_of_edges()} edges')
-
-# Create the EXACT format needed
-graph_data = {
-    'nodes': list(G.nodes(data=True)),
-    'edges': list(G.edges(data=True))
-}
-
-print('Saving in proper format...')
-with open('/app/stablecoin_working.pkl', 'wb') as f:
-    pickle.dump(graph_data, f)
-
-print('✅ Dataset created successfully!')
-print(f'Format verification:')
-print(f'  - nodes key exists: {\"nodes\" in graph_data}')
-print(f'  - edges key exists: {\"edges\" in graph_data}')
-print(f'  - nodes type: {type(graph_data[\"nodes\"])}')
-print(f'  - edges type: {type(graph_data[\"edges\"])}')
-"
-
-      - name: Verify dataset format
-        run: |
-          docker run --rm \
-            -v ${{ github.workspace }}:/app \
-            tarikua123/decoder-image:latest \
-            python -c "
-import pickle
-print('Verifying dataset format...')
-with open('/app/stablecoin_working.pkl', 'rb') as f:
-    data = pickle.load(f)
-    
-print('✅ Dataset loaded successfully!')
-print(f'Type: {type(data)}')
-print(f'Keys: {list(data.keys())}')
-print(f'Number of nodes: {len(data[\"nodes\"])}')
-print(f'Number of edges: {len(data[\"edges\"])}')
-print('Format is correct!')
-"
-
-      - name: Run matcher with guaranteed dataset
+      - name: Run matcher
         run: |
           docker run --rm \
             --shm-size=2g \
@@ -97,10 +33,10 @@ print('Format is correct!')
             tarikua123/decoder-image:latest \
             bash -c "
               set -e
-              echo 'Starting matcher with guaranteed working dataset...'
+              echo 'Starting matcher...'
               python -m subgraph_matching.train \
                 --dataset=graph \
-                --graph_pkl_path=stablecoin_working.pkl \
+                --graph_pkl_path=stablecoin_sample.pkl \
                 --node_anchored \
                 --batch_size 4 \
                 --val_size 16 \
@@ -109,7 +45,7 @@ print('Format is correct!')
               echo '✅ Matcher completed successfully!'
             "
 
-      - name: Run decoder with guaranteed dataset
+      - name: Run decoder
         run: |
           docker run --rm \
             --shm-size=2g \
@@ -118,9 +54,9 @@ print('Format is correct!')
             tarikua123/decoder-image:latest \
             bash -c "
               set -e
-              echo 'Starting decoder with guaranteed working dataset...'
+              echo 'Starting decoder...'
               python -m subgraph_mining.decoder \
-                --dataset=stablecoin_working.pkl \
+                --dataset=stablecoin_sample.pkl \
                 --n_trials=20 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
@@ -128,13 +64,6 @@ print('Format is correct!')
               echo '✅ Decoder completed successfully!'
               ls -la /app/results/
             "
-
-      - name: Check results
-        run: |
-          echo "Checking results:"
-          ls -la results/ || echo "No results directory"
-          echo "Checking plots:"
-          ls -la plots/ || echo "No plots directory"
 
       - name: Upload results
         if: always()
