--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -72,11 +72,8 @@ jobs:
                 --dataset=graph \
                 --graph_pkl_path=stablecoin_network.pkl \
                 --node_anchored \
-                --batch_size 16 \
-                --val_size 128 \
-                --n_batches 5000 \           # ✅ Reduced from 10000 to 5000
-                --eval_interval 1000 \        # ✅ Reduced evaluation frequency
-                --n_workers 4                # ✅ Reduced from 4 to 2 workers
+                --batch_size 32 \
+                --val_size 128
               echo 'Checking output directories...'
               ls -la /app/results
               ls -la /app/plots
