--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -73,7 +73,10 @@ jobs:
                 --graph_pkl_path=stablecoin_network.pkl \
                 --node_anchored \
                 --batch_size 32 \
-                --val_size 128
+                --val_size 128 \
+                --n_batches 5000 \         
+                --eval_interval 1000 \     
+                --n_workers 2             
               echo 'Checking output directories...'
               ls -la /app/results
               ls -la /app/plots
