--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -48,7 +48,7 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=stablecoin_network.pkl \
+                --dataset=stablecoin_sample1.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
@@ -70,13 +70,10 @@ jobs:
               echo 'Starting matcher run on cryptocurrency dataset...'
               python -m subgraph_matching.train \
                 --dataset=graph \
-                --graph_pkl_path=stablecoin_network.pkl \
+                --graph_pkl_path=stablecoin_sample1.pkl \
                 --node_anchored \
                 --batch_size 16 \
-                --val_size 128 \
-                --n_batches 5000 \
-                --eval_interval 1000 \
-                --n_workers 2
+                --val_size 128
               echo 'Checking output directories...'
               ls -la /app/results
               ls -la /app/plots
